--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/davidsjg/React-Portfolio/issues"
   },
-  "homepage": "https://davidsjg.github.io",
+  "homepage": "https://davidsjg.github.io/React-Portfolio",
   "dependencies": {
     "gh-pages": "^3.1.0"
   }
