pictures working on portfolio page

--- a/src/projects.json
+++ b/src/projects.json
@@ -6,7 +6,7 @@
     "name": "Community Car Share",
     "website": "https://thawing-reaches-91071.herokuapp.com/",
     "github": "https://github.com/swhachey/community_car_share",
-    "imgFile": 123
+    "image": "./images/carShare1.png"
   },
   {
     "id": 2,
